# kpotest

.github/workflows/: ci.yml
api-gateway/: docker-compose.yml  nginx.conf  postman-collection.json
api-gateway/common/: CMakeLists.txt
api-gateway/common/include/: models.hpp
api-gateway/common/src/: database.cpp
api-gateway/orders-service/include/: CMakeLists.txt  Dockerfile  config.json
api-gateway/orders-service/src/: main.cpp  message_gueue.cpp
api-gateway/payments-service/include/: CMakeLists.txt  Dockerfile  config.json
api-gateway/payments-service/src/: database.cpp  inbox_processor.cpp  main.cpp
api-gateway/src/: package.json
api-gateway/src/src/: index.tsx
api-gateway/websocket-service/include/: CMakeLists.txt  DockerFile  config.json  websocket_server.hpp
api-gateway/websocket-service/src/: main.cpp  websocket_server.cpp
